<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="14sp">

        <RelativeLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/help_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="20sp"
                android:layout_marginBottom="5dp"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/help"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/help"
                    android:src="@drawable/ic_baseline_contact_support_white"
                    android:visibility="gone"
                    app:tint="@color/colorPrimary" />

                <ImageView
                    android:id="@+id/imglanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_language"
                    app:tint="@color/colorPrimary" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/volume_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20sp"
                android:layout_marginBottom="5dp"

                android:padding="10dp">

                <ImageView
                    android:id="@+id/mute"
                    android:layout_width="24sp"
                    android:layout_height="24sp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_baseline_volume_up_24"
                    app:tint="@color/colorPrimary" />

            </RelativeLayout>

        </RelativeLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btn_sign_In_with_phone_number"
            android:layout_below="@+id/top"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

<!--            <com.itsronald.widget.ViewPagerIndicator-->
<!--                android:id="@+id/dot1"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="bottom|center_horizontal"-->
<!--                android:gravity="center_vertical"-->
<!--                app:selectedDotColor="@color/colorPrimary" />-->

<!--        </androidx.viewpager.widget.ViewPager>-->

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_In_with_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/sign_in_with_phone_number"
            android:lines="1"
            android:layout_marginLeft="@dimen/dp_10"
            android:drawableStart="@drawable/ic_phone"
            android:layout_above="@+id/btn_sign_In_with_google"
            android:layout_marginTop="10sp"
            android:layout_gravity="center_vertical"
            android:textAllCaps="true"
            android:textAppearance="@style/Lato_Bold"
            android:textSize="14sp"
            android:theme="@style/BrandButtonStylePlain"
            android:layout_marginRight="@dimen/dp_10"
            android:gravity="center" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_In_with_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/sign_in_with_google"
            android:lines="1"
            android:layout_marginLeft="@dimen/dp_10"
            android:drawableStart="@drawable/ic_google"
            android:layout_above="@+id/btn_sign_in_with_gmail"
            android:layout_marginTop="10sp"
            android:layout_gravity="center_vertical"
            android:textAllCaps="true"
            android:textAppearance="@style/Lato_Bold"
            android:textSize="14sp"
            android:theme="@style/BrandButtonStylePlain"
            android:layout_marginRight="@dimen/dp_10"
            android:gravity="center" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_in_with_gmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:lines="1"
            android:layout_above="@+id/tv_SignUp"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="10sp"
            android:drawableStart="@drawable/ic_email"
            android:layout_gravity="center_vertical"
            android:textAllCaps="true"
            android:textAppearance="@style/Lato_Bold"
            android:textSize="14sp"
            android:theme="@style/BrandButtonStyleRed"
            android:layout_marginRight="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/sign_in_with_email" />

        <TextView
            android:id="@+id/tv_SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="10sp"
            android:layout_marginRight="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/material_black"
            android:textSize="16sp"/>
    </RelativeLayout>
</LinearLayout>